--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,20 +2,21 @@
   "name": "Finance App - Controle Financeiro",
   "short_name": "Finance App",
   "description": "Aplicativo completo de controle financeiro pessoal",
-  "start_url": "/",
+  "start_url": "/Axis/",
+  "scope": "/Axis/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1e293b",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
